--- a/AbkarFE/package.json
+++ b/AbkarFE/package.json
@@ -16,7 +16,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "video-react": "^0.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
