--- a/AbkarFE/package.json
+++ b/AbkarFE/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-router-dom": "^6.22.0",
     "router": "^1.3.8",
     "video-react": "^0.16.0"
