--- a/AbkarFE/package.json
+++ b/AbkarFE/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.2",
     "dom": "^0.0.3",
     "formik": "^2.4.6",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
